[server][client] Fixed Delete Collection

--- a/client/src/components/collection/collection.css
+++ b/client/src/components/collection/collection.css
@@ -28,7 +28,7 @@
   position: relative;
 }
 
-.remove_comic{
+.remove_collection{
   position: relative;
   display: inline-block;
   color: orange;
