--- a/client/src/css/collection.css
+++ b/client/src/css/collection.css
@@ -6,12 +6,12 @@
 }
 
 .grid_figure{
-  flex-basis: calc(33.333% - 2rem);
+  flex-basis: calc(33.333% - 6rem);
   flex-grow: 1;
   flex-shrink: 0;
   margin: 0 2rem 2rem 2rem;
   padding: 2rem;
-  border: 1px solid lightgray;
+  border: 1px solid orange;
   background: white;
   box-shadow: 0 0 0 5px rgba(0,0,0,0.03);
   position: relative;
