[server][client] add Profile and Update User & Profile

--- a/client/src/css/modal.css
+++ b/client/src/css/modal.css
@@ -20,7 +20,7 @@
   z-index: 999;
   margin: 30vh auto;
   padding: 20px;
-  background: #FF8000;
+  background: #ff610f;
   border: 1px solid #666;
   width: 70vw;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
