Add avatar with upload image in profile [jpg files admited]

--- a/client/src/css/profile.css
+++ b/client/src/css/profile.css
@@ -17,3 +17,15 @@
 .input{
   color: #FFF;
 }
+
+.avatar {
+  
+  width: 200px;
+  height: 200px;
+
+  background-size: cover;
+
+  background-position: center;
+
+  border-radius: 50%;
+}
