--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -1,9 +1,15 @@
 .avatar {
   display: inline-block;
- width: 50px;
- height: 50px;
+ width: 45px;
+ height: 45px;
  border-radius: 50%;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
+}
+
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
 }
